--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,23 @@
-<p>forgot-password works!</p>
+
+<div class="container">
+
+  <div class="wrap">
+    <div>
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input type="text" name="email" [(ngModel)]="email" matInput>
+      </mat-form-field>
+      <button (click)="forgotPassword()" mat-flat-button color="primary">Send email</button>
+    </div>
+
+
+
+
+  <a routerLink="/register"> <button mat-button color="primary">Need an account?</button> </a>
+  <a routerLink="/login"> <button mat-button color="primary">Already Registered?</button></a>
+
+
+  </div>
+
+
+</div>
