--- a/src/app/auth/verify-email/verify-email.component.html
+++ b/src/app/auth/verify-email/verify-email.component.html
@@ -1,1 +1,5 @@
-<p>verify-email works!</p>
+
+<div>
+  <h1>The reset email has been sent to your mailbox, please check it!</h1>
+    <h3>The website should redirect you to login page in  {{count}} seconds, if that's not happening please click <a routerLink="/login">here</a> </h3>
+</div>
