added some security and email verification

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -3,6 +3,7 @@
 
   <div class="wrap">
     <div>
+        <h1>Forgot Password?</h1>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
         <input type="text" name="email" [(ngModel)]="email" matInput>
