added some verification

--- a/src/app/dashboard/updates/updates.component.html
+++ b/src/app/dashboard/updates/updates.component.html
@@ -11,6 +11,7 @@
         </li>
         <li>
           <a  (click)="changeUrl('/login')" > Login </a>
+          <a  (click)="changeUrl('/login')" > Logout </a>
         </li>
 
       </ul>
