--- a/src/app/dashboard/updates/updates.component.html
+++ b/src/app/dashboard/updates/updates.component.html
@@ -10,8 +10,8 @@
         <a  (click)="changeUrl(navElement.url)" > {{navElement.name}} </a>
         </li>
         <li>
-          <a  (click)="changeUrl('/login')" > Login </a>
-          <a  (click)="changeUrl('/login')" > Logout </a>
+          <a *ngIf="isUserLoggedIn" (click)="changeUrl('/login')" > Login </a>
+          <a *ngIf="!isUserLoggedIn" (click)="logout()" > Logout </a>
         </li>
 
       </ul>
