--- a/src/app/dashboard/updates/updates.component.html
+++ b/src/app/dashboard/updates/updates.component.html
@@ -1,27 +1,33 @@
 <div class="container">
 
   <nav>
-    <div>
-      <ul>
-        <li *ngFor="let navElement of navTable"
-        [routerLinkActive]="'active'"
-        [routerLinkActiveOptions]="{exact: true}"
-        >
-        <a  (click)="changeUrl(navElement.url)" > {{navElement.name}} </a>
-        </li>
-        <li>
-          <a *ngIf="isUserLoggedIn" (click)="changeUrl('/login')" > Login </a>
-          <a *ngIf="!isUserLoggedIn" (click)="logout()" > Logout </a>
-        </li>
+    <mat-drawer-container class="drawContainer" autosize>
+      <mat-drawer #drawer class="sidenav" mode="side">
+        <ul>
+          <li *ngFor="let navElement of navTable"
+          [routerLinkActive]="'active'"
+          [routerLinkActiveOptions]="{exact: true}"
+          >
+          <a  (click)="changeUrl(navElement.url)" > {{navElement.name}} </a>
+          </li>
+          <li>
+            <a *ngIf="!isUserLoggedIn" (click)="changeUrl('/login')" > Login </a>
+            <a *ngIf="isUserLoggedIn" (click)="logout()" > Logout </a>
+          </li>
 
-      </ul>
-    </div>
+        </ul>
+      </mat-drawer>
+
+      <div class="sidenavContent">
+        <button  type="button" mat-button (click)="drawer.toggle()">
+          <mat-icon style="font-size: 30px;">menu</mat-icon>
+        </button>
+      </div>
+
+    </mat-drawer-container>
   </nav>
-
-
-
-
 
 
 </div>
 <router-outlet></router-outlet>
+
